--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Engine Stats
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,37 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">Engine Stats</ion-title>
     </ion-toolbar>
   </ion-header>
+  
+  <div style="width:100%;text-align: center;align-content: center;align-self: center;">
+    <img src="..\assets\img\Car-Dashboard-1.jpg" height="80px" alt="Avatar" class="avatar">
+  </div>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+<ion-list>
+    <ion-item>
+      <ion-label>Coolant</ion-label>
+    </ion-item>
+
+  <ion-item><!-- Colorize Progressbar -->
+    <ion-progress-bar color="danger"  [value]="coolantTemp"></ion-progress-bar>  
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Oil Temperature</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-progress-bar color="secondary" [value]="oilTemp"></ion-progress-bar>
+  </ion-item>
+
+  <ion-item>
+   <ion-label>Fuel Pressure</ion-label>
+  </ion-item>
+
+<ion-item>
+  <ion-progress-bar color="dark" [value]="fuelPressure"></ion-progress-bar>
+</ion-item>
+  
+  </ion-list>
 </ion-content>
