--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      About Engine Stats
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,32 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
+      <ion-title size="large">About</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <ion-content padding>
+    <ion-grid>
+      <ion-row>
+        <ion-col width-100>
+          <ion-list>
+            <ion-item>
+              <strong>Name:</strong> eMonitor
+            </ion-item>
+            <ion-item>
+              <strong>Version:</strong> 1.0.0 (prototype)
+            </ion-item>
+            <ion-item>
+              <strong>Description:</strong> 
+            </ion-item>
+            <ion-item>
+               This application monitors critical engine information such as temperature, oil pressure, etc.
+            </ion-item>
+          </ion-list>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-content>
+
 </ion-content>
+
